os-application-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpc-alb-ip-allowlisting
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-lb-name: "openshift-vpc-alb-ip-allowlisting"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "proxy-protocol"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "public"
spec:
  type: LoadBalancer
  selector:
    app: http-proxy-echo-ip
  ports:
   - name: http
     protocol: TCP
     port: 80
     targetPort: 8080
   - name: https
     protocol: TCP
     port: 443
     targetPort: 8443
  externalTrafficPolicy: Local
